	  Still does not build on initial check-in (2013-5-19)
	* STM32L15X:  Add DMA and UART start.  Correctly initialize the heap
	  (2013-5-19).
	* arch/arm/src/stm32/stm32l15xxx_rcc.c chip/stm32_flash.h:  Add RCC PLL
	  and FLASH configuration logic for the STM32L152X (2013-5-19).
	* include/nuttx/usb/audio.h:  Typo- and bug-fixes from Ken Pettit
	  (2013-5-19)
	* audio/, drivers/audio, include/nuttx/audio.h:  Add a new audio subsystem
	  and jVS1053 driver to NuttX.  Contributed by Ken Pettit (2013-5-19).
	* configs/miroe-stm32f4/:  Add audio logic to NSH configuration.  From Ken
	  Petty (2013-5-19).
	* nuttx/arch/arm/src/lm/chip/lm_flash.h and nuttx/arch/arm/src/lm/lm_flash.c:
	  Add support for TI/Stellaris internal FLASH MTD driver.  From Max
	  Holtzberg (2013-5-20).
	* arm/src/stm32/chip/stm32l15xxx_vectors.h:  After correcting errors in the
	  vector definition file, the STM32L-Discovery NSH port now seems to be
	  fully functional.  Also fixed an error that was causing the LEDs to be
	  controlled incorrectly (2013-5-21).
	* arch/arm/src/stm32/chip/stm32_lcd.h: Add definitions for STM32L15X
	  segment LCD (2013-5-21).
	* configs/lm3s6965-ek/discover: Add an example configuration for UDP
	  discovery tool on the lm3s6965-ek board.  From Max Holtberg
	  (2013-5-21).
	* audio/, drivers/audio, include/nuttx/audio:  Added a callback interface
	  to the Audio upperhalf driver for dequeueing, reporting async events,
	  etc. Also included is some initial work for the VS1053 driver.  From
	  Ken Pettit (2013-5-21).
	* include/nuttx/audio/audio.h:  Moved from include/nuttx/ to include/nuttx/audio.
	  (2013-5-21).
	* configs/lm3s6965-ek/tcpecho: This configuration builds the simple TCP
	  echo example based on W.Richard Steven UNIX Programming book to ensure
	  correct usage of the socket API. Contributed by Max Holtzberg (2013-5-22).
	* configs/stm32ldiscovery/src/stm32_lcd.c:  Framework for support of the
	  STM32L-Discovery's segment LCD (2013-5-22).
