@@ -4772,4 +4772,6 @@
 	  correct usage of the socket API. Contributed by Max Holtzberg (2013-5-22).
 	* configs/stm32ldiscovery/src/stm32_lcd.c:  Framework for support of the
 	  STM32L-Discovery's segment LCD (2013-5-22).
+	* fs/fs_poll.c:  Poll setup/teardown logic should ignore invalid (i.e.,
+	  negative) file descriptors.  Max Holtzberg (2013-5-23).
 
